# REIL-hex-game

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: hex-game-strategies.md
scripts/: a2c_train.py  experiments.py  export_tscript.py  export_weights.py  ppo_train.py  sitecustomize.py  train_alg_hex.py
src/reil_hex_game/: __init__.py  cli.py
src/reil_hex_game/agents/: __init__.py  copy.py  hex_cnn.py  policy.pt  ppo_opponent_agent.py  pytorch_agent.py  rule_based_agent.py  rule_based_agent_1.py  rule_based_agent_2.py  rule_based_agent_3.py  rule_based_agent_4.py  rule_based_helper.py  rule_based_v1_agent.py  rule_based_v2_agent.py  rule_based_v3_agent.py  rule_based_v4_agent.py  sb3_agent.py
src/reil_hex_game/hex_engine/: __init__.py  game_input.py  game_state.py  hex_engine.py  hex_env.py  hex_geometry.py  side_swap_wrapper.py
src/reil_hex_game/hex_engine/hex_pygame/: __init__.py  game_draw.py  game_input.py  game_state.py  hex.py  hex_geometry.py
src/reil_hex_game/submission/: facade.py  rule_based_agent_2.py  rule_based_agent_3.py
tournament/: example2.py
tournament/group_9_rieder_christiani/: __init__.py  numpy_agent.py  policy.pt  tscript_agent.py
