[project]
name = "reil-hex-game"
version = "0.1.0"
description = "A reinforcement learning project to play the hex game"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "gymnasium[all]>=1.1.1",
    "pygame>=2.6.1",
    "sb3-contrib>=2.6.0",
    "stable-baselines3[extra]>=2.6.0",
    "tensorboard>=2.19.0",
]

[project.scripts]
reil-hex-game = "reil_hex_game:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
